--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "rxjs-compat": "^6.6.7",
+    "slugify": "^1.6.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -55,6 +57,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
